--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,18 @@
         android:theme="@style/Theme.Cognizantapp"
         tools:targetApi="31">
         <activity
-            android:name=".whowroteit.WhoWroteActivity"
+            android:name=".FcmActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".whowroteit.WhoWroteActivity"
+            android:exported="true">
+
         </activity>
 
         <receiver
@@ -38,9 +43,7 @@
 
         <activity
             android:name=".AsyncActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".DemoActivity"
             android:exported="true" />
