--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cognizantapp"
         tools:targetApi="31">
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".FcmActivity"
             android:exported="true">
@@ -28,9 +33,7 @@
         </activity>
         <activity
             android:name=".whowroteit.WhoWroteActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
 
         <receiver
             android:name=".SmsReceiver"
@@ -43,7 +46,7 @@
 
         <activity
             android:name=".AsyncActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".DemoActivity"
             android:exported="true" />
